--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "start": "nodemon src/index.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --detectOpenHandles --forceExit"
   },
   "keywords": [],
@@ -12,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "dotenv": "^16.3.1",
+    "express": "^4.18.2",
     "jest": "^29.7.0",
     "jsdom": "^22.1.0",
     "mongoose": "^8.0.0",
+    "nodemon": "^3.0.1",
     "puppeteer": "^21.5.1"
   }
 }
