--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "type": "module",
   "scripts": {
     "start": "nodemon src/index.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --detectOpenHandles --forceExit"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --coverage --detectOpenHandles --forceExit",
+    "jsdoc": "jsdoc -r src -d docs -t node_modules/docdash"
   },
   "keywords": [],
   "author": "",
@@ -19,5 +20,10 @@
     "mongoose": "^8.0.0",
     "nodemon": "^3.0.1",
     "puppeteer": "^21.5.1"
+  },
+  "devDependencies": {
+    "docdash": "^2.0.2",
+    "jsdoc": "^4.0.2",
+    "jsdoc-to-markdown": "^8.0.0"
   }
 }
